fix: Adjust positioning of carousel controls on small screens
Before it was positioned entirely with vw, but this caused the arrows to fall outside of the screen on tiny screens, causing a scrollbar to appear

--- a/app/javascript/scss/elements/_carousel.scss
+++ b/app/javascript/scss/elements/_carousel.scss
@@ -151,7 +151,11 @@
   }
 
   &--next {
-    right: -6vw;
+    right: $margin * -0.25;
+
+    @include media-min(xs) {
+      right: -6vw;
+    }
 
     @include media-min(md) {
       right: -45px;
@@ -159,7 +163,11 @@
   }
 
   &--previous {
-    left: -6vw;
+    left: $margin * -0.25;
+
+    @include media-min(xs) {
+      left: -6vw;
+    }
 
     @include media-min(md) {
       left: -45px;
